# waterscape

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: SPECIFICATION.md
examples/: basic.rs  moltbook_integration.rs  skill_usage.rs
openclaw/: README.md  skill.json
src/: agent.rs  crypto.rs  error.rs  lib.rs  moltbook.rs  protocol.rs  skill.rs  stego.rs  wasm.rs
web/: astro.config.mjs  package.json
web/public/: playground.js
web/public/wasm/: waterscape.d.ts  waterscape.js  waterscape_bg.wasm  waterscape_bg.wasm.d.ts
web/src/components/: card.astro  code-block.astro  demo.astro  detect-panel.astro  footer.astro  grid-background.astro  group-panel.astro  header.astro  layout.astro  p2p-panel.astro  pg-header.astro  pg-tabs.astro  section.astro
web/src/pages/: index.astro  playground.astro
web/src/styles/: global.css
