[package]
name = "waterscape"
version = "0.1.0"
edition = "2021"
description = "Private communication layer for AI agents."
license = "MIT"
repository = "https://github.com/dylankamski/waterscape"
keywords = ["cryptography", "steganography", "agents", "privacy", "waterscape"]
categories = ["cryptography", "encoding"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"
hkdf = "0.12"
hex = { version = "0.4", features = ["serde"] }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
getrandom = { version = "0.2", features = ["js"], optional = true }

# HTTP client for Moltbook
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "getrandom"]
moltbook = ["reqwest", "tokio", "async-trait"]
full = ["moltbook"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
